@@ -38,9 +38,7 @@
 :model "M4097"
 :interface "SCSI"
 :model "fi-4120C"
-:interface "USB SCSI"
-:status :untested
-:comment "Probably similar to fi-4220C?"
+:interface "SCSI USB"
 :model "fi-4220C"
 :interface "SCSI USB"
 :model "fi-4340C"
